--- a/src/app/pages/header/header.component.scss
+++ b/src/app/pages/header/header.component.scss
@@ -1,6 +1,7 @@
 @import "../../../styles.scss";
 
 header {
+    overflow: hidden;
     height: 100vh;
     padding: 5% 10%;
 
