--- a/src/app/pages/skills/skills.component.scss
+++ b/src/app/pages/skills/skills.component.scss
@@ -1,6 +1,7 @@
 @import "../../../styles.scss";
 
 main {
+    overflow: hidden;
     padding: 5% 10%;
 
     display: flex;
